--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@font-face {
+    font-family: optane;
+    src: url(../fonts/Optane-Bold.tff);
+    font-weight: bold;
+}
 *{
 	padding: 0;
 	margin: 0;
@@ -52,11 +57,14 @@ nav div{
 	text-align: center;
 	padding-bottom: 3em;
 	padding-top: 6em;
-	font-size: 1.2em;
 	border: 4px solid blue;
-	border-top:0px; 
+	border-top:0px;
 }
-@media(max-width: 750px){
+.logo a{
+		font-family: 'optane'; 
+		font-size: 1.7em;
+}
+@media(max-width: 800px){
 
 	.caption{
 	text-align: center;
@@ -68,9 +76,11 @@ nav div{
     .logo{
 	padding-bottom: 2em;
 	padding-top: 4em;
-	font-size: 1.2em;
     border: 3px solid blue;
     border-top:0px;
+    }
+    .logo a{
+    font-size: 1em;
     }
     a{
     	font-size: 0.8em;
@@ -79,14 +89,17 @@ nav div{
     	height: 75vh;
     }
 }
-@media(max-width: 550px){
+@media(max-width: 600px){
     .logo{
 	padding-bottom: 2em;
 	padding-top: 3em;
 	font-size: 1em;
     }
+    .logo a{
+    font-size: 1em;
+    }
     a{
-    	font-size: 0.7em;
+    	font-size: 0.6em;
     }
 
 }
