--- a/nav-bar/nav.css
+++ b/nav-bar/nav.css
@@ -38,6 +38,7 @@ nav div{
 }	
 .logo{
 	text-align: center;
+    padding-bottom: 0.5em;
 }
 .navigation div:nth-of-type(4) a{
 		font-family: 'optane'; 
