--- a/nav-bar/nav.css
+++ b/nav-bar/nav.css
@@ -1,128 +1,84 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 *{
-	padding: 0;
-	margin: 0;
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1em;
+    padding: 0;
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1em;
 }
 a{
-	text-decoration: none;
-	color: white;
-	text-transform: uppercase;
-	font-weight: bold;
-	padding-bottom: 0.2em;
-}
-
-/***************Main Background**********************/
-.navigation_phone{
-	display: none;
-	transition: all 1s ease-in 0s;
-}
-.navigation{
-	display: flex;
-	position: sticky;
-	top: 0;
-	left: 0;
-    background-color:#599ef2;
-	transition: background-color 1s ease-in 0s;
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-bottom: 0.2em;
 }
 .icon{
-	padding: 0.5em;
-	border: solid #e3ecf7 2px;
-	border-radius: 7px;
+    padding: 0.5em;
+    border: solid #e3ecf7 2px;
+    border-radius: 7px;
 }
-nav div{
+@media (min-width: 900px){
+.navigation_phone{
+    display: none;
+    transition: all 1s ease-in 0s;
+}
+.navigation{
+    display: flex;
+    position: sticky;
+    top: 0;
+    left: 0;
+    background-color: #4c3c3c;
+    transition: background-color 1s ease-in 0s;
+}
+.navigation div{
   text-align: center;
   flex:1 1 auto;
   padding-top: 1em;
-}	
+}   
 .logo{
-	text-align: center;
+    text-align: center;
     padding-bottom: 0.5em;
 }
 .navigation div:nth-of-type(4) a{
-		font-family: 'optane'; 
-		font-size: 2em;
-		color: white;
+        font-family: 'optane'; 
+        font-size: 2em;
+        color: white;
 }
 .navigation a:hover{
-	color: rgba(255,255,255,0.7);
+    color: rgba(255,255,255,0.7);
 }
 .navigation div:nth-of-type(4) a:hover{
-	color: white;
+    color: white;
 }
-
-@media screen and(max-width: 768px){
-    .navigation{
-    	display: none;
-    }
-    .navigation_phone{
-    	display: flex;
-    	flex-direction: row;
-    	flex-wrap: wrap;
-    	color: black;
-    	background-color: #599ef2;
-    	position: sticky;
-		top: 0;
-		left: 0;
-		color: black;
-    }
-    .navigation_phone div {
-    	padding: 1em;
-    }
-    .button_click{
-    	display: none;
-    	width: 100vw;
-    	background-color: #599ef2;
-    }
-    .button_click div{
-    	text-align: left;
-    	font-size: 1em;
-    	padding: 0.5em;
-    }
-    .logo_phone{
-      text-align: left;
-
-    }
-    .logo_phone a{
-       font-family: 'optane';
-       font-size: 1.5em;
-       color: white;
-    }
-    .button{
-    	text-align: right;
-    }
-    .button_click div a:hover{
-	    color: rgba(255,255,255,0.7);
-    }
 }
 @media (max-width: 900px){
     .navigation{
-    	display: none;
+        display: none;
     }
     .navigation_phone{
-    	display: flex;
-    	flex-direction: row;
-    	flex-wrap: wrap;
-    	color: black;
-    	background-color: #599ef2;
-    	position: sticky;
-		top: 0;
-		left: 0;
-		color: black;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        color: black;
+        background-color: #4c3c3c;
+        position: sticky;
+        top: 0;
+        left: 0;
+        color: black;
     }
     .navigation_phone div {
-    	padding: 1em;
+        padding: 1em;
+        flex:1 1 auto;
     }
     .button_click{
-    	display: none;
-    	width: 100vw;
-    	background-color: #599ef2;
+        display: none;
+        width: 100vw;
+        background-color: #4c3c3c;
     }
     .button_click div{
-    	text-align: left;
-    	font-size: 1em;
-    	padding: 0.5em;
+        text-align: left;
+        font-size: 1em;
+        padding: 0.5em;
     }
     .logo_phone{
       text-align: left;
@@ -134,9 +90,9 @@ nav div{
        color: white;
     }
     .button{
-    	text-align: right;
+        text-align: right;
     }
     .button_click div a:hover{
-	    color: rgba(255,255,255,0.7);
+        color: rgba(255,255,255,0.7);
     }
 }
