added services section home page

--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ header{
 }
 .navigation_phone{
 	display: none;
-	transition: all 1s ease-in 0s;
+	transition: background-color 1s ease-in 0s;
 }
 .navigation{
 	display: flex;
@@ -79,7 +79,7 @@ nav div{
 .navigation div:nth-of-type(4) a:hover{
 	color: white;
 }
-@media (max-width: 900px){
+@media (max-width: 1000px){
     .navigation{
     	display: none;
     }
@@ -122,6 +122,21 @@ nav div{
     .button_click div a:hover{
 	    color: rgba(255,255,255,0.7);
     }
+    .caption{
+    	font-size: 1.5em;
+    	padding-top: 30%;
+    }
+}
+@media (max-width: 450px){
+    .logo_phone a{
+       font-family: 'optane';
+       font-size: 1em;
+       color: white;
+    }
+    .caption{
+    	font-size: 1.2em;
+    	padding-top: 50%;
+    }
 }
 /************** Review Section**************/
 
@@ -129,11 +144,11 @@ nav div{
 	width: 100%;
 	height: 300px;
 	padding-top: 2em;
+	background-color: #fff4f4;
 }
 .reviews h1{
  text-align: center;
  font-size: 1.5em;
- transition-duration: 200ms;
 }
 .reviews_container{
 	display: flex;
@@ -147,8 +162,6 @@ nav div{
 }
 .image_card img{
 	border-radius: 50%;
-	transition-duration: 200ms;
-	transition-property: all;
 }
 .image_card{
 	display: flex;
@@ -168,3 +181,60 @@ nav div{
 	border: none;
 	padding: 1em;
 }
+
+
+
+/********Services offered************/
+
+.section_facilities{
+    padding-top: 1em;
+    text-align: center;
+    padding-bottom:3em;
+}
+.hero{
+    font-size: 1.75em;
+    text-transform: uppercase;
+}
+.section_facilities hero{
+    font-size: 3em;
+}
+.facilities{
+    padding-top: 2em;
+    display: flex;
+}
+.service{
+    display: flex;
+    border: 1px solid brown;
+    border-radius: 15px;
+    margin:0 0.5em;
+    width: 30%;
+    flex: 1 1 auto; 
+    flex-direction: column;
+}
+.work_icon{
+    font-size: 10em;
+    color: #46e9f2;
+    font-weight: 1px;
+}
+.service p{
+    padding: 1em;
+}
+@media(max-width: 685px){
+    .facilities{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+     }
+    .service{
+        width: 75%;
+        margin-left:12.5%;
+        margin-top: 1em;
+    } 
+}
+
+/**********Footer************/
+footer {
+	background-color:#15171c; 
+	padding: 1em 1em;
+	color: white;
+}	
