--- a/nav-bar/nav.css
+++ b/nav-bar/nav.css
@@ -20,25 +20,20 @@ a{
 @media (min-width: 900px){
 .navigation_phone{
     display: none;
-    transition: all 1s ease-in 0s;
 }
 .navigation{
     display: flex;
+    justify-content: space-around;
+    align-items: center;
     position: fixed;
-    width: 100vw;
+    width: 100%;
+    height: 75px;
     top: 0;
     left: 0;
     background-color: #4c3c3c;
-    transition: background-color 1s ease-in 0s;
-}
-.navigation div{
-  text-align: center;
-  flex:1 1 auto;
-  padding-top: 1em;
-}   
+}  
 .logo{
     text-align: center;
-    padding-bottom: 0.5em;
 }
 .navigation div:nth-of-type(4) a{
         font-family: 'optane'; 
@@ -52,7 +47,7 @@ a{
     color: white;
 }
 }
-@media (max-width: 900px){
+@media (max-width: 1000px){
     .navigation{
         display: none;
     }
@@ -62,7 +57,7 @@ a{
         flex-wrap: wrap;
         background-color: #4c3c3c;
         position: fixed;
-        width: 100vw;
+        width: 100%;
         top: 0;
         left: 0;
         color: black;
