--- a/css/index.css
+++ b/css/index.css
@@ -80,7 +80,7 @@ nav div{
 .navigation div:nth-of-type(4) a:hover{
 	color: white;
 }
-@media (max-width: 1000px){
+@media (max-width: 800px){
     .navigation{
     	display: none;
     }
@@ -138,6 +138,9 @@ nav div{
     .caption{
     	font-size: 1.2em;
     	padding-top: 50%;
+    }
+    header{
+      height: 350px;
     }
 }
 /************** Review Section**************/
