--- a/css/index.css
+++ b/css/index.css
@@ -80,7 +80,7 @@ nav div{
 .navigation div:nth-of-type(4) a:hover{
 	color: white;
 }
-@media (max-width: 800px){
+@media (max-width: 950px){
     .navigation{
     	display: none;
     }
@@ -132,7 +132,7 @@ nav div{
 @media (max-width: 450px){
     .logo_phone a{
        font-family: 'optane';
-       font-size: 1em;
+       font-size: 1.25em;
        color: white;
     }
     .caption{
@@ -210,6 +210,7 @@ nav div{
 .service{
     display: flex;
     box-shadow:0 1px 5px 0 rgba(0,0,0,.3);
+    padding-top: 1em;
     border-radius: 5px;
     margin:0 0.5em;
     width: 30%;
@@ -224,7 +225,7 @@ nav div{
 .service p{
     padding: 1em;
 }
-@media(max-width: 685px){
+@media(max-width: 750px){
     .facilities{
         display: flex;
         flex-direction: column;
@@ -238,8 +239,33 @@ nav div{
 }
 
 /**********Footer************/
-footer {
+.footer {
 	background-color:#15171c; 
 	padding: 1em 1em;
 	color: white;
+}
+
+@media(max-width: 450px){
+  .footer {
+    padding: 0.5em 0.5em;
+    font-size: 0.75em;
+  }
+  .reviews_container p{
+    padding:1em;
+  }
+}
+@media(max-width: 360px){
+    .logo_phone a {
+        font-size: 1em;
+    }
+    .icon {
+    padding: 0.35em;
+    }
+    .navigation_phone div {
+    padding: 1.25em;
+    }
+    .reviews_container p {
+    padding: 1em;
+    font-size: 0.9em;
+}
 }	
